--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -33,16 +33,15 @@ import Card from '../components/Card.astro';
 				</linearGradient>
 			</defs>
 		</svg>
-		<body>
-		<a href="/">首页</a>
-		<a href="/about/">关于</a>
-		<a href="/blog/">博客</a>
-		<h1>Welcome to <span class="text-gradient"> My Astro</span></h1>
-		<p class="instructions">
-			To get started, open the directory <code>src/pages</code> in your project.<br />
-			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
-		</p>
-		</body>
+        <body>
+            <a href="/">首页</a>
+            <a href="/about/">关于</a>
+            <a href="/blog/">博客</a>
+          
+            <h1>我的 Astro 学习博客</h1>
+            <p>在这里，我将分享我的学习 Astro 之旅。</p>
+        </body>
+		
 		<ul role="list" class="link-card-grid">
 			<Card
 				href="https://docs.astro.build/"
