--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -40,6 +40,11 @@ import Card from '../components/Card.astro';
           
             <h1>我的 Astro 学习博客</h1>
             <p>在这里，我将分享我的学习 Astro 之旅。</p>
+            <ul>
+                <li><a href="/posts/post1/">文章 1</a></li>
+                <li><a href="/posts/post2/">文章 2</a></li>
+                <li><a href="/posts/post3/">文章 3</a></li>
+            </ul>
         </body>
 		
 		<ul role="list" class="link-card-grid">
