--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -2,6 +2,8 @@
 import Layout from "../layouts/Layout.astro";
 import Card from "../components/Card.astro";
 import '../styles/global.css';
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
 const pageTitle = "关于我";
 const identity = {
     firstName: "莎拉",
@@ -53,9 +55,7 @@ const textCase = "uppercase";
             </defs>
         </svg>
         <body>
-            <a href="/">首页</a>
-            <a href="/about/">关于</a>
-            <a href="/blog/">博客</a>
+            <Header />
             <h1>我的 Astro 网站</h1>
             <h1>{pageTitle}</h1>
             <h2>……和我的新 Astro 网站！</h2>
@@ -105,6 +105,7 @@ const textCase = "uppercase";
                     <p>我的目标不是 3 天。</p>
                 )
             }
+            <Footer />
         </body>
 
         <ul role="list" class="link-card-grid">
