--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -2,6 +2,8 @@
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
 import '../styles/global.css';
+import Header from '../components/Header.astro';
+import Footer from '../components/Footer.astro';
 ---
 
 <Layout title="Welcome to Astro.">
@@ -35,9 +37,7 @@ import '../styles/global.css';
 			</defs>
 		</svg>
         <body>
-            <a href="/">首页</a>
-            <a href="/about/">关于</a>
-            <a href="/blog/">博客</a>
+            <Header />
           
             <h1>我的 Astro 学习博客</h1>
             <p>在这里，我将分享我的学习 Astro 之旅。</p>
@@ -46,6 +46,7 @@ import '../styles/global.css';
                 <li><a href="/posts/post2/">文章 2</a></li>
                 <li><a href="/posts/post3/">文章 3</a></li>
             </ul>
+            <Footer />
         </body>
 		
 		<ul role="list" class="link-card-grid">
